{
    "name": "PlayerControl",
    "maps": [
        {
            "name": "Player",
            "id": "ebafebff-5bce-4888-a69b-4d3e35894e51",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "99235d21-9c00-4a1f-a228-84ec3ae40ef2",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Rotate",
                    "type": "Value",
                    "id": "0f64137a-3975-4406-a780-af94463f4e47",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ValidateRoute",
                    "type": "Button",
                    "id": "4e9c09f1-d0e8-4fff-ac86-b5389f908609",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "NewAttempt",
                    "type": "Button",
                    "id": "34a6a87a-b60a-400a-a0b0-4bcdfd49aa7d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "StartEndSession",
                    "type": "Button",
                    "id": "d20b35c0-39be-48d6-866c-db2aa0f74e8b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Close",
                    "type": "Button",
                    "id": "909a4fc3-b842-47e0-bacb-d927688842a6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RecordRoute",
                    "type": "Button",
                    "id": "df4b6db2-7ef6-4bf2-af5f-b5fd459c7a95",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ShowHideDebug",
                    "type": "Button",
                    "id": "76728087-1b41-400e-9d76-fc311e1eb2b0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Quit",
                    "type": "Button",
                    "id": "3e01257d-3c1d-4070-86fa-5ecf92568052",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TakeScreenshot",
                    "type": "Button",
                    "id": "dd7576f9-2270-4b6a-b3ca-50ef295348d1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "Keyboard Arrows",
                    "id": "15fa2cb8-baca-42c2-aff9-bb1a64edbc9b",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "a5b2420b-bca7-4209-a82b-f94714314e97",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "e2d8f3ee-41d8-4de7-8db2-f8281e0acb8c",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Keyboard WASD",
                    "id": "64a9325d-2b60-41f9-818e-c677f500e1fd",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "1ec8106e-9bca-4552-aa19-5ce3c8fdd0eb",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "f70f8994-aed6-4e63-9165-0e0f77f71fe1",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Gamepad",
                    "id": "243694b9-bd41-4584-af40-f0e44045bfc6",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "cd3a2db8-42c4-4101-a695-f30b6b252fa5",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "07d63904-bab3-4b6d-95a3-7638a1c2b475",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "2e2d47e3-7bd8-4ad7-a4bf-370ec67439e8",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ValidateRoute",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "343472e1-e8c0-4916-9305-4ab794b0e0e4",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ValidateRoute",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "70abac52-6d5a-4ab2-aee5-85b51e55d7c9",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NewAttempt",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8715899a-24ae-449d-845f-8db276fcbecc",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NewAttempt",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Keyboard Arrows",
                    "id": "13348614-449c-4029-87ff-f7bc18e8b5ce",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "07de12f4-39de-4c44-8ae1-fb1d9c1102a5",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "8dbd8f11-c4a6-4c1c-965d-96ca3d8b6463",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Keyboard WASD",
                    "id": "f0f86365-3f73-431d-bcca-7f79b75fd72d",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "0833a246-7d1c-492f-89dc-36b84d1e89f7",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "4942c4b8-df79-4d1a-ae29-899e3e83de6e",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Gamepad",
                    "id": "8179352c-fd1f-4421-ad05-16247a321260",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "a95ede2d-f500-4ec2-96cb-f9c94a96a186",
                    "path": "<Gamepad>/rightStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "3c3f8c8c-46ee-4eef-9fa0-973ba9632d94",
                    "path": "<Gamepad>/rightStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "bcf38258-f22c-4637-93e9-d25f5206b85f",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartEndSession",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dcf3a6e5-719f-48aa-8343-b717dcad3a47",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartEndSession",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3a78fa21-ebbd-4d3a-b8c3-5ef0046ea2a5",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Close",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5b739768-44d3-4c4e-a6c5-04a9b579105b",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Close",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5c1e5643-bfcb-409e-9ce4-2aa36b19cd23",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RecordRoute",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0631933c-f807-488f-a260-5772bb2a67d0",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RecordRoute",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "84ed01b7-b755-4073-af85-b4caf2219e4c",
                    "path": "<Keyboard>/m",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShowHideDebug",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "be4e6aba-397b-49f2-aa41-134a44789852",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Quit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8a13bf03-5589-4c46-aa0e-63fbd846ed3a",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TakeScreenshot",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}